{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 136,
  "lineage": "d5f54e10-18b6-216e-938f-9f7ef0094240",
  "resources": [
    {
      "module": "module.aws_internet_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0d47f6c9751b7dce7",
            "public_dns": "ec2-3-227-14-9.compute-1.amazonaws.com",
            "public_ip": "3.227.14.9",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f3d892de259504d",
            "arn": "arn:aws:ec2:us-east-1:965746825787:instance/i-08ee319ac49366bb9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ee319ac49366bb9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-064689af9ca6222ce",
            "private_dns": "ip-10-0-1-87.ec2.internal",
            "private_ip": "10.0.1.87",
            "public_ip": "54.145.249.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e1e0b61e8f5291f8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cee0c72fb13ae1e7",
            "tags": {
              "Name": "wordpress-ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e7e0bbb2d750775a"
            ]
          },
          "dependencies": [
            "module.aws_key_pair.aws_key_pair.mykeypair",
            "module.aws_security_group.aws_security_group.wordpress-sg",
            "module.aws_subnet.aws_subnet.subnet1",
            "module.aws_vpc.aws_vpc.wordpress-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wordpress_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ee6554a97f0c98ac",
            "owner_id": "965746825787",
            "tags": {
              "Name": "wordpress_igw"
            },
            "vpc_id": "vpc-007bf758594fc177c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.wordpress-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_internet_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d47f6c9751b7dce7",
            "id": "nat-0dd2b04f296e90c1a",
            "network_interface_id": "eni-00e54bf8a6c87ae73",
            "private_ip": "10.0.1.88",
            "public_ip": "3.227.14.9",
            "subnet_id": "subnet-0cee0c72fb13ae1e7",
            "tags": {
              "Name": "nt"
            }
          },
          "dependencies": [
            "module.aws_internet_gateway.aws_eip.eip",
            "module.aws_subnet.aws_subnet.subnet1",
            "module.aws_vpc.aws_vpc.wordpress-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_internet_gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wordpress-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c15fdd4144e05f4f",
            "owner_id": "965746825787",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ee6554a97f0c98ac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpress-rt"
            },
            "vpc_id": "vpc-007bf758594fc177c"
          },
          "dependencies": [
            "module.aws_internet_gateway.aws_internet_gateway.wordpress_igw",
            "module.aws_vpc.aws_vpc.wordpress-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_internet_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-sub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b028f8c25e86282",
            "route_table_id": "rtb-0c15fdd4144e05f4f",
            "subnet_id": "subnet-0cee0c72fb13ae1e7"
          },
          "dependencies": [
            "module.aws_internet_gateway.aws_internet_gateway.wordpress_igw",
            "module.aws_internet_gateway.aws_route_table.wordpress-rt",
            "module.aws_subnet.aws_subnet.subnet1",
            "module.aws_vpc.aws_vpc.wordpress-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965746825787:security-group/sg-0e7e0bbb2d750775a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0e7e0bbb2d750775a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Allow HTTPS",
            "name_prefix": null,
            "owner_id": "965746825787",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-007bf758594fc177c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.wordpress-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965746825787:subnet/subnet-0cee0c72fb13ae1e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0cee0c72fb13ae1e7",
            "map_public_ip_on_launch": true,
            "owner_id": "965746825787",
            "tags": {
              "Name": "subnet1"
            },
            "vpc_id": "vpc-007bf758594fc177c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.wordpress-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965746825787:subnet/subnet-07ed991cedc323920",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-07ed991cedc323920",
            "map_public_ip_on_launch": true,
            "owner_id": "965746825787",
            "tags": {
              "Name": "subnet2"
            },
            "vpc_id": "vpc-007bf758594fc177c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.wordpress-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965746825787:subnet/subnet-0e8b20d850d94ecf4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0e8b20d850d94ecf4",
            "map_public_ip_on_launch": true,
            "owner_id": "965746825787",
            "tags": {
              "Name": "subnet3"
            },
            "vpc_id": "vpc-007bf758594fc177c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.wordpress-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965746825787:subnet/subnet-06f9a395e96e9b272",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-06f9a395e96e9b272",
            "map_public_ip_on_launch": false,
            "owner_id": "965746825787",
            "tags": {
              "Name": "subnet4"
            },
            "vpc_id": "vpc-007bf758594fc177c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.wordpress-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet5",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965746825787:subnet/subnet-00c5214319a60f2ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-00c5214319a60f2ba",
            "map_public_ip_on_launch": false,
            "owner_id": "965746825787",
            "tags": {
              "Name": "subnet5"
            },
            "vpc_id": "vpc-007bf758594fc177c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.wordpress-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet6",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965746825787:subnet/subnet-0ce60cc1112801503",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0ce60cc1112801503",
            "map_public_ip_on_launch": false,
            "owner_id": "965746825787",
            "tags": {
              "Name": "subnet6"
            },
            "vpc_id": "vpc-007bf758594fc177c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.wordpress-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wordpress-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965746825787:vpc/vpc-007bf758594fc177c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ca02231279fd6e46",
            "default_route_table_id": "rtb-0e14f1ab737d73744",
            "default_security_group_id": "sg-0aeb575f2d088f2af",
            "dhcp_options_id": "dopt-4ec40f34",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-007bf758594fc177c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e14f1ab737d73744",
            "owner_id": "965746825787",
            "tags": {
              "Name": "wordpress-vpc"
            }
          }
        }
      ]
    }
  ]
}